# SuperNote

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  TextEdit.cpp  TextEdit.h  main.cpp
